# factory-part-recognition

./: .gitignore  Dockerfile  Makefile  README.md  README_IMPROVED.md  docker-compose.yml  index.html  main.py  pyproject.toml  requirements.txt
config/: config.yaml
docs/: IMPROVEMENTS.md
src/: augmentations.py  config_loader.py  evaluate.py  gradcam.py  inference.py  metrics.py  model.py  ood_detection.py  predict.py  train.py  train_improved.py  utils.py  visualizations.py
tests/: test_core.py
